--- a/texte.css
+++ b/texte.css
@@ -12,9 +12,9 @@
 
   p {
 
-        margin-left: 30 !important;
-        margin-right: 30 !important;
-        margin-top: 30 !important;
+        margin-left: 10% !important;
+        margin-right: 10% !important;
+        margin-top: 10% !important;
 
         font-family: 'roboto', sans-serif;
         font-size: 18px;
