--- a/texte.css
+++ b/texte.css
@@ -50,7 +50,7 @@ font-family: 'afterglow', serif;
 font-size: 18px}
 
 
-@media only screen and (min-height: 100vh){
+@media only screen and (min-width: 1000px){
 
 p { margin-top: 2%;
   margin-bottom: 1%;
