--- a/texte.css
+++ b/texte.css
@@ -8,7 +8,7 @@
   src: url(Roboto-Regular.ttf);
 }
 
-
+@media all and (orientation: portrait);
   p {
 
         margin-left: 10 !important;
@@ -50,7 +50,7 @@ font-family: 'afterglow', serif;
 font-size: 18px}
 
 
-@media only screen and (min-width: 1000px){
+@media screen and (min-width: 1000px){
 
 p { margin-top: 2%;
   margin-bottom: 1%;
