--- a/texte.css
+++ b/texte.css
@@ -14,9 +14,13 @@
         margin-left: 10 !important;
         margin-right: 10 !important;
         margin-top: 10 !important;
+    
+    color : #dfdff2 ;
 
-        font-family: 'roboto', sans-serif;
-        font-size: 18px;
+    text-align: justify;
+
+    font-family: 'roboto', sans-serif;
+    font-size: 18px;
 
         line-height: 125%;
     }
