--- a/texte.css
+++ b/texte.css
@@ -53,7 +53,7 @@ font-family: 'afterglow', serif;
 font-size: 18px}
 
 
-@media all and (min-width: 800px){
+@media all and (min-height: 100vh);{
 
 p { margin-top: 2%;
   margin-bottom: 1%;
