--- a/texte.css
+++ b/texte.css
@@ -8,6 +8,7 @@
   src: url(Roboto-Regular.ttf);
 }
 
+@media (max-width: 750px){
   p {
 
         margin-left: 10 !important;
@@ -41,6 +42,7 @@ h1 { margin-top: 6%;
 
 }
 
+
 h2 {margin-top: 0%;
   margin-bottom: 2%;
 
@@ -51,7 +53,7 @@ text-align: center;
 
 font-family: 'afterglow', serif;
 font-size: 18px}
-
+}
 
 @media all and (min-height: 100vh);{
 
