--- a/texte.css
+++ b/texte.css
@@ -8,19 +8,16 @@
   src: url(Roboto-Regular.ttf);
 }
 
-@media (max-width: 750px){
+@media (max-width: 480px) {
+
   p {
 
-        margin-left: 10 !important;
-        margin-right: 10 !important;
+        margin-left: 30 !important;
+        margin-right: 30 !important;
         margin-top: 10 !important;
-    
-    color : #dfdff2 ;
 
-    text-align: justify;
-
-    font-family: 'roboto', sans-serif;
-    font-size: 18px;
+        font-family: 'roboto', sans-serif;
+        font-size: 18px;
 
         line-height: 125%;
     }
@@ -42,7 +39,6 @@ h1 { margin-top: 6%;
 
 }
 
-
 h2 {margin-top: 0%;
   margin-bottom: 2%;
 
@@ -55,7 +51,8 @@ font-family: 'afterglow', serif;
 font-size: 18px}
 }
 
-@media all and (min-height: 100vh);{
+
+@media only screen and (min-height: 100vh){
 
 p { margin-top: 2%;
   margin-bottom: 1%;
