--- a/texte.css
+++ b/texte.css
@@ -8,7 +8,7 @@
   src: url(Roboto-Regular.ttf);
 }
 
-@media (max-width: 480px) {
+@media only screen and (max-width: 600px) {
 
   p {
 
@@ -52,7 +52,7 @@ font-size: 18px}
 }
 
 
-@media only screen and (min-height: 100vh){
+@media only screen and (min-width: 600px){
 
 p { margin-top: 2%;
   margin-bottom: 1%;
