--- a/texte.css
+++ b/texte.css
@@ -8,7 +8,7 @@
   src: url(Roboto-Regular.ttf);
 }
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 1000px) {
 
   p {
 
@@ -52,7 +52,7 @@ font-size: 18px}
 }
 
 
-@media only screen and (min-width: 800px){
+@media all and (min-width: 1000px){
 
 p { margin-top: 2%;
   margin-bottom: 1%;
