--- a/texte.css
+++ b/texte.css
@@ -10,9 +10,9 @@
 
   p {
 
-        margin-left: 30 !important;
-        margin-right: 30 !important;
-        margin-top: 10 !important;
+        margin-left: 30px !important;
+        margin-right: 30px !important;
+        margin-top: 10px !important;
 
         font-family: 'roboto', sans-serif;
         font-size: 18px;
