--- a/texte.css
+++ b/texte.css
@@ -8,16 +8,16 @@
   src: url(Roboto-Regular.ttf);
 }
 
-  p {
+p {
 
-        margin-left: 30px !important;
-        margin-right: 30px !important;
-        margin-top: 10px !important;
+    margin-left: 30px !important;
+    margin-right: 30px !important;
+    margin-top: 10px !important;
 
-        font-family: 'roboto', sans-serif;
-        font-size: 18px;
-
-        line-height: 125%;
+    font-family: 'roboto', sans-serif;
+    font-size: 18px;
+    color : #dfdff2 ;
+    line-height: 125%;
     }
 
 body {
