--- a/texte.css
+++ b/texte.css
@@ -50,7 +50,7 @@ font-size: 18px}
 
 
 
-@media all and (min-width: 1000px){
+@media (min-width: 1000px){
 
 p { margin-top: 2%;
   margin-bottom: 1%;
