--- a/texte.css
+++ b/texte.css
@@ -8,6 +8,7 @@
   src: url(Roboto-Regular.ttf);
 }
 
+@media all and (max-width: 1000px)
 p {
 
     margin-left: 30px !important;
@@ -50,7 +51,7 @@ font-size: 18px}
 
 
 
-@media (min-width: 1000px){
+@media all and (min-width: 1000px){
 
 p { margin-top: 2%;
   margin-bottom: 1%;
