--- a/texte.css
+++ b/texte.css
@@ -11,13 +11,14 @@
 @media all and (max-width: 1000px)
 p {
 
-    margin-left: 30px !important;
-    margin-right: 30px !important;
-    margin-top: 10px !important;
-
+    margin-left: 5% !important;
+    margin-right: 5% !important;
+    margin-top: 5% !important;
+    
+    color: #dfdff2;
     font-family: 'roboto', sans-serif;
     font-size: 18px;
-    color: red; 
+     
     line-height: 125%;
     }
 
