--- a/texte.css
+++ b/texte.css
@@ -15,7 +15,7 @@ p {
     margin-right: 5% !important;
     margin-top: 5% !important;
     
-    color: #dfdff2;
+    color: white;
     font-family: 'roboto', sans-serif;
     font-size: 18px;
      
