--- a/texte.css
+++ b/texte.css
@@ -9,21 +9,23 @@
 }
 
 @media screen and (max-width: 1000px)
+
+
+body {
+  background-color: #16161D;}
+
 p {
 
     margin-left: 5% !important;
     margin-right: 5% !important;
     margin-top: 5% !important;
     
-    color: white;
+    color: #dfdff2;
     font-family: 'roboto', sans-serif;
     font-size: 18px;
      
     line-height: 125%;
     }
-
-body {
-  background-color: #16161D;}
 
 
 h1 { margin-top: 6%;
