--- a/texte.css
+++ b/texte.css
@@ -8,9 +8,6 @@
   src: url(Roboto-Regular.ttf);
 }
 
-@media screen and (max-width: 1000px){
-
-
 body {
   background-color: #16161D;}
 
@@ -24,8 +21,7 @@ p {
     font-family: 'roboto', sans-serif;
     font-size: 18px;
      
-    line-height: 125%;
-    }
+    line-height: 125%;}
 
 
 h1 { margin-top: 6%;
@@ -36,9 +32,6 @@ h1 { margin-top: 6%;
   font-size: 40px !important;
 
   text-align: center;
-
-
-
 }
 
 h2 {margin-top: 0%;
@@ -52,7 +45,7 @@ text-align: center;
 font-family: 'afterglow', serif;
 font-size: 18px}
 
-}
+
 
 @media all and (min-width: 1000px){
 
