--- a/texte.css
+++ b/texte.css
@@ -19,7 +19,8 @@ p {
     
     color: #dfdff2;
     font-family: 'roboto', sans-serif;
-    font-size: 18px;
+    font-size: 21px;
+    text-align: justify;
      
     line-height: 125%;}
 
@@ -29,7 +30,7 @@ h1 { margin-top: 6%;
 
   color : #dfdff2 ;
   font-family: 'afterglow', serif;
-  font-size: 40px !important;
+  font-size: 60px !important;
 
   text-align: center;
 }
@@ -43,7 +44,7 @@ text-align: center;
   text-align: center;
 
 font-family: 'afterglow', serif;
-font-size: 18px}
+font-size: 28px}
 
 
 
